@@ -1,0 +1,1 @@
+rootpw --iscrypted $1$HE4C5mKO$3pVzO34Wz/TJGL0s69rkS0
