@@ -2,6 +2,8 @@ kickseed (0.33) UNRELEASED; urgency=low
 
   * Fix %packages handling to account for names in aptitude patterns really
     being unanchored regular expressions.
+  * Update crypted user and root password handling for passwd 1:4.0.13-5.
+    This is incompatible with older versions of passwd.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Sun, 11 Dec 2005 10:07:04 +0000
 
